# rtv1

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  CMakeLists.txt.bak.bak  Makefile  author  rtv1  scene_1  scene_2
a.out.dSYM/Contents/Resources/DWARF/: a.out
header/: rtv1.h
libft/: Makefile  author  ft_arrlen.c  ft_atoi.c  ft_atoi_base.c  ft_bzero.c  ft_check_borders.c  ft_cnt_digits.c  ft_cnt_l.c  ft_cnt_w.c  ft_free.c  ft_free_arr.c  ft_free_list.c  ft_is_hex.c  ft_is_space.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_izero.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  (+37 more)
rtv1.dSYM/Contents/Resources/DWARF/: rtv1
scenes/: cone_and_plane.rtv  one_cylinder.rtv  one_sphere.rtv  scene_1  scene_1.rtv  scene_2  scene_2.rtv  scene_3  scene_3.rtv  scene_4
src/: allocation.c  camera.c  color.c  compute_lighting.c  draw.c  errors.c  figure.c  grafic_connection.c  hooks_and_deals.c  key_press.c  light.c  light_and_shadow.c  main.c  main1.c  math.c  no_name.c  normal_to_obj.c  param_validation.c  presets.c  quadratic_equation.c  quater_rotation.c  ray_trace.c  read_file.c  read_lib.c  read_setups.c  read_utils.c  tangent_to_object.c  tear_down.c  vector_color.c  vectors.c
src/graphics/: color.c  draw.c  fixing_the_near_obj.c  get_utils.c  grafic_connection.c  light_and_shadow.c  no_name.c  normal_to_obj.c  quadratic_equation.c  quater_rotation.c  ray_trace.c  vectors.c  vectors_1.c  vectors_2.c
src/main/: main.c
src/parsing/: allocation.c  camera.c  draw.c  errors.c  figure.c  grafic_connection.c  hooks_and_deals.c  light.c  param_validation.c  presets.c  read_file.c  read_utils.c  set_default.c  tear_down.c
